==> Orange-zw/stm32l432-smart-home/code/HARDWARE/SD/SDdriver.c <==
#include "SDdriver.h"
#include "delay.h"
#include "ff.h"
#include "stm32f10x_spi.h"
#define SD_CS_GPIO_Port GPIOB
#define SD_CS_Pin GPIO_Pin_12

void SD_CS(uint8_t p)
{
	if (p == 0)
	{
		GPIO_SetBits(SD_CS_GPIO_Port, SD_CS_Pin);
	}
	else
	{
		GPIO_ResetBits(SD_CS_GPIO_Port, SD_CS_Pin);
	}
}

uint8_t spi_readwrite(uint8_t Txdata)
{
	// TXE为1，TDR寄存器为空，表示可以发送数据
	while (SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) != SET);
	SPI_I2S_SendData(SPI2, Txdata);  // 写DR会清除标志位

	// 等待RXNE为1，RDR寄存器非空，表示可以读取接收到的数据
	while (SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_RXNE) != SET);
	return SPI_I2S_ReceiveData(SPI2);  // 读DR同理
}
